--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "version": "0.1.0-beta.11",
+  "version": "0.1.0-beta.17",
   "license": "MIT",
+  "browserslist": "ie 11, not dead",
   "main": "index.js",
   "typings": "index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "*"
   ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && yarn esbuild src/index.tsx --external:next --external:react --format=cjs --bundle --outfile=dist/index.js && yarn esbuild src/server.tsx --platform=node --external:next --external:react --format=cjs --bundle --outfile=dist/server.js",
+    "build": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && rollup -c",
+    "build2": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && yarn esbuild src/index.tsx --external:next --external:react --format=cjs --bundle --outfile=dist/index.js && yarn esbuild src/server.tsx --platform=node --external:next --external:react --format=cjs --bundle --outfile=dist/server.js",
     "test": "yarn test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "echo \"nah\"",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -56,12 +56,19 @@
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rollup": "^2.60.2",
+    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-esbuild": "^4.7.2",
     "size-limit": "^7.0.3",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-babel": "^5.3.0",
     "@types/multiparty": "^0.0.33",
     "multiparty": "^4.2.2"
   }
