--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "browserslist": "ie 11, not dead",
   "main": "index.js",
@@ -11,22 +11,15 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
     "build": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && rollup -c",
     "build2": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && yarn esbuild src/index.tsx --external:next --external:react --format=cjs --bundle --outfile=dist/index.js && yarn esbuild src/server.tsx --platform=node --external:next --external:react --format=cjs --bundle --outfile=dist/server.js",
     "test": "yarn test --passWithNoTests",
-    "lint": "tsdx lint",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
     "next": ">=10",
     "react": ">=16"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
   },
   "prettier": {
     "printWidth": 80,
@@ -48,6 +41,11 @@
     }
   ],
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-babel": "^5.3.0",
     "@size-limit/preset-small-lib": "^7.0.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -60,16 +58,10 @@
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "size-limit": "^7.0.3",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@types/multiparty": "^0.0.33",
-    "multiparty": "^4.2.2"
+    "urlencoded-body-parser": "^3.0.0"
   }
 }
