--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "browserslist": "ie 11, not dead",
   "main": "index.js",
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && rollup -c",
     "build2": "rm -rf dist && mkdir dist && cp package.json ./dist/package.json && yarn esbuild src/index.tsx --external:next --external:react --format=cjs --bundle --outfile=dist/index.js && yarn esbuild src/server.tsx --platform=node --external:next --external:react --format=cjs --bundle --outfile=dist/server.js",
-    "test": "yarn test --passWithNoTests",
+    "test": "jest",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -47,10 +47,16 @@
     "@babel/preset-env": "^7.16.4",
     "@rollup/plugin-babel": "^5.3.0",
     "@size-limit/preset-small-lib": "^7.0.3",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "esbuild": "^0.14.2",
     "husky": "^7.0.4",
+    "isomorphic-fetch": "^3.0.0",
+    "jest": "^27.4.3",
+    "msw": "^0.36.0",
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -58,10 +64,12 @@
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "size-limit": "^7.0.3",
+    "ts-jest": "^27.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "ts-node": "^10.4.0",
     "urlencoded-body-parser": "^3.0.0"
   }
 }
